stop scrolling when collapsed naviagtion is open

--- a/loso.css
+++ b/loso.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
 }
 
+.stop-scroll {
+    overflow: hidden;
+}
+
 html {
     scroll-behavior: smooth;
 }
